# Dataset-PHPDynamic

./: .gitignore  README.md  config.yml.example  main.py  php_projects.csv  pyproject.toml
config/: __init__.py  config.yml.example  semgrep_rules.yml  settings.py
docs/: design.md  github_api_reference.md  idea.md  todo.md
php_dynctrlflow/: __init__.py  __main__.py  cache_manager.py  cli.py  csv_exporter.py  downloader.py  exceptions.py  github_client.py  loc_counter.py  php_analyzer.py  project_searcher.py  search_result.py  semgrep_analyzer.py  settings.py
php_dynctrlflow/semgrep/: __init__.py  rules.yml
phpincludes/: __init__.py  __main__.py  cli.py  csv_exporter.py  github_client.py  php_analyzer.py  rate_limit_handler.py  search_result.py  semgrep_analyzer.py  settings.py
scripts/: run_analysis.py  setup.py  translate_to_english.py
src/: __init__.py  cache_manager.py  csv_exporter.py  exceptions.py  github_client.py  php_analyzer.py  project_searcher.py  rate_limit_handler.py  search_result.py  semgrep_analyzer.py
tests/: __init__.py  test_cache_manager.py  test_csv_exporter.py  test_exceptions.py  test_github_client.py  test_php_analyzer.py  test_project_searcher.py  test_rate_limit_handler.py  test_search_result.py  test_semgrep_analyzer.py  test_settings.py
tests/integration/: __init__.py  test_end_to_end.py
